# src/generated/swagger.json
@@ -137,6 +137,38 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"StockStatus": {
+				"type": "string",
+				"enum": [
+					"low",
+					"medium",
+					"overstock"
+				]
+			},
+			"ProductImage": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"url": {
+						"type": "string"
+					},
+					"isPrimary": {
+						"type": "boolean"
+					},
+					"productId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"url",
+					"isPrimary",
+					"productId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Product": {
 				"properties": {
 					"id": {
@@ -163,6 +195,12 @@
 						"type": "number",
 						"format": "double"
 					},
+					"isAvailable": {
+						"type": "boolean"
+					},
+					"stockStatus": {
+						"$ref": "#/components/schemas/StockStatus"
+					},
 					"sizes": {
 						"items": {
 							"type": "string"
@@ -175,8 +213,11 @@
 						},
 						"type": "array"
 					},
-					"imageUrl": {
-						"type": "string"
+					"images": {
+						"items": {
+							"$ref": "#/components/schemas/ProductImage"
+						},
+						"type": "array"
 					},
 					"categoryId": {
 						"type": "string"
@@ -198,8 +239,11 @@
 					"price",
 					"stockQuantity",
 					"minimumStockLevel",
+					"isAvailable",
+					"stockStatus",
 					"sizes",
 					"colors",
+					"images",
 					"categoryId",
 					"createdAt",
 					"updatedAt"
@@ -850,7 +894,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"CUSTOMER"
+						]
 					}
 				],
 				"parameters": []
@@ -880,7 +926,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"CUSTOMER"
+						]
 					}
 				],
 				"parameters": [
@@ -917,7 +965,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"CUSTOMER"
+						]
 					}
 				],
 				"parameters": [
@@ -1241,6 +1291,47 @@
 						}
 					}
 				}
+			}
+		},
+		"/products/options": {
+			"get": {
+				"operationId": "GetProductOptions",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"colors": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										},
+										"sizes": {
+											"items": {
+												"type": "string"
+											},
+											"type": "array"
+										}
+									},
+									"required": [
+										"colors",
+										"sizes"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"description": "Returns all valid sizes and colors for products",
+				"tags": [
+					"Products"
+				],
+				"security": [],
+				"parameters": []
 			}
 		},
 		"/products/{id}": {
@@ -1921,7 +2012,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"CUSTOMER"
+						]
 					}
 				],
 				"parameters": []
@@ -1958,7 +2051,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"CUSTOMER"
+						]
 					}
 				],
 				"parameters": []
@@ -1991,7 +2086,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"CUSTOMER"
+						]
 					}
 				],
 				"parameters": [],
@@ -2031,7 +2128,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"CUSTOMER"
+						]
 					}
 				],
 				"parameters": [
@@ -2078,7 +2177,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"CUSTOMER"
+						]
 					}
 				],
 				"parameters": [
